# spatial-tag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  ios-ci.yml  release.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/monitoring/elk/: elasticsearch.yml  kibana.yml  logstash.conf
infrastructure/monitoring/grafana/dashboards/: services.json  spatial-engine.json  user-metrics.json
infrastructure/monitoring/jaeger/: jaeger-all-in-one.yml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/prometheus/rules/: alerts.yml
infrastructure/scripts/: backup-databases.sh  init-databases.sh  monitoring-setup.sh  ssl-cert-renewal.sh
infrastructure/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars
infrastructure/terraform/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/mongodb/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
src/backend/api-gateway/: Dockerfile  package.json  tsconfig.json
src/backend/commerce-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/commerce-service/src/: __init__.py
src/backend/commerce-service/src/api/: grpc_server.py
src/backend/commerce-service/src/config/: settings.py
src/backend/commerce-service/src/models/: purchase.py  wishlist.py
src/backend/commerce-service/src/services/: payment.py  stripe_client.py  wishlist.py
src/backend/commerce-service/tests/: conftest.py
src/backend/commerce-service/tests/integration/: test_wishlist.py
src/backend/commerce-service/tests/unit/: test_payment.py
src/backend/k8s/: api-gateway-deployment.yaml  commerce-deployment.yaml  configmap.yaml  ingress.yaml  secrets.yaml  spatial-deployment.yaml  tag-deployment.yaml  user-deployment.yaml
src/backend/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_add_spatial_indexes.down.sql  000002_add_spatial_indexes.up.sql  000003_add_user_status.down.sql  000003_add_user_status.up.sql
src/backend/proto/: commerce.proto  spatial.proto  tag.proto  user.proto
src/backend/spatial-engine/: Cargo.toml  Dockerfile  README.md
src/backend/spatial-engine/src/: config.rs  lib.rs  main.rs
src/backend/spatial-engine/src/grpc/: mod.rs  server.rs
src/backend/spatial-engine/src/models/: location.rs  mod.rs  spatial_index.rs
src/backend/spatial-engine/src/services/: lidar.rs  mod.rs  proximity.rs
src/backend/spatial-engine/tests/: integration_tests.rs
src/backend/spatial-engine/tests/unit/: lidar_tests.rs
src/backend/tag-service/: Dockerfile  README.md  go.mod  go.sum
src/backend/user-service/: Dockerfile  README.md  package.json  tsconfig.json
src/ios/: .gitignore  .swiftlint.yml  Podfile  README.md
src/ios/SpatialTag/: AppDelegate.swift  Info.plist  SceneDelegate.swift
src/ios/SpatialTag.xcodeproj/: project.pbxproj
src/ios/SpatialTagUITests/: AuthenticationUITests.swift  MainFlowUITests.swift  TagCreationUITests.swift
src/ios/ci/: build.sh  deploy.sh  test.sh
src/ios/fastlane/: Appfile  Fastfile  Matchfile
(+125 files in other folders)
